create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="895">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1044">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">design a website for free</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="897">
+<section class="engine"><a href="https://mobirise.co/i">build your own website</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1046">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="ECiVvcb8+v/bHMQaRssySqvu7CmIBrVqgm5KatuIE4JskJ0d8s2M/A7VR/QDoDIErr5Jy/DcyLKdX9MI9NRLUQ1048I3fbLR+m+ENCU4kE6s91PFsosv3/bUIN3XHBRa">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="Svu825XeCdmaPppVLBGX7o177CK0ZeYruXWEy2W13vXGLl0exk6ipBW01l9pNaHCu5ojbVXsHHh1sMi0k0xeme75sOOE84/LB3Stac1aBwdytJdfFyfh4/kxQZNcUfWE">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
