--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1044">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1166">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build your own website</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1046">
+<section class="engine"><a href="https://mobirise.co/a">web site builder</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1168">
 
     
 
@@ -70,7 +70,7 @@
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJM-oD4Q3bekgRmUFc1Vf88wQ" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
-                <h2 class="pb-3 align-left mbr-fonts-style display-2">Contact Garden City Kebab House</h2>
+                <h2 class="pb-3 align-left mbr-fonts-style display-2">Contact <br>Garden City <br>Kebab House<br>Phone 01244-810-268.</h2>
                 <div>
                     <div class="icon-block pb-3">
                         <span class="icon-block__icon">
@@ -84,17 +84,17 @@
 </span></div><div><span style="font-style: normal;">
 </span></div><div><span style="font-style: normal;">Is your order late?
 </span></div><div><span style="font-style: normal;">
-</span></div><div><span style="font-style: normal;">The best thing to do is to give us a call. We’ll know exactly where it is, and why it’s been delayed. You can call us directly on 01244810268.
+</span></div><div><span style="font-style: normal;">The best thing to do is to give us a call. We’ll know exactly where it is, and why it’s been delayed. You can call us directly on <strong>01244-810-268</strong>.
 </span></div><div><span style="font-style: normal;"><br></span></div></h4>
                     </div>
                     <div class="icon-contacts pb-3">
                         <h5 class="align-left mbr-fonts-style display-7">Garden City Kebab House ,Deeside,</h5>
-                        <p class="mbr-text align-left mbr-fonts-style display-7">Phone:&nbsp;01244 812 593<br>Email: youremail@mail.com</p>
+                        <p class="mbr-text align-left mbr-fonts-style display-7">Phone:&nbsp;01244 812 593<br>Our Email: youremail@mail.com</p>
                     </div>
                 </div>
                 <div data-form-type="formoid">
-                    <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="Svu825XeCdmaPppVLBGX7o177CK0ZeYruXWEy2W13vXGLl0exk6ipBW01l9pNaHCu5ojbVXsHHh1sMi0k0xeme75sOOE84/LB3Stac1aBwdytJdfFyfh4/kxQZNcUfWE">
+                    <div data-form-alert="" hidden="">Thanks for filling out the form! </div>
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="fG51BKc4exrSUHbaLhcWpYS6t/m17dVvgn74gBd98EGOtaE4n/CwOtviFbzKt9jN4O2YzY8zOjB0Cj5NGazI8P2P7BAV0BBCysPl4wg/MjN0dSJ9RHTmO+OL9yHgE7V9">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
@@ -108,7 +108,7 @@
                             <div class="col-md-12" data-for="message">
                                 <textarea class="form-control input" name="message" rows="3" data-form-field="Message" placeholder="Message" style="resize:none" id="message-form4-7"></textarea>
                             </div>
-                            <div class="input-group-btn col-md-12" style="margin-top: 10px;"><button href="" type="submit" class="btn btn-form btn-secondary display-4">SEND MESSAGE</button></div>
+                            <div class="input-group-btn col-md-12" style="margin-top: 10px;"><button href="" type="submit" class="btn btn-form btn-primary display-4">SEND MESSAGE</button></div>
                         </div>
                     </form>
                 </div>
