--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1400">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1558">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1402">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1560">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form! </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="hpblygHShzhgNxK2bv4lzOUIjqpebFVpsqNUo+4MVxdPJkDRttL0WrOLqmC8oZcDR18d0XLNOiZeIjcGW+ylcQUQ8jako4t3O0PMDH6hSl8RCgEhEtT368wzZmzWE8V2">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="ojuN8cnGWchTc1ZFY8WKXsKqJtuEhu1dRyp7RLUKKFBhzcXbwopppsEzp/rdX/fYqN66glg30j28NZjISiAYqkxi8BaYNX+DybF95IvbwFw6JnhVzVQ9yvLj6IGQQvYB">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
