--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1675">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="272">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create your own website</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1677">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="274">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form! </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="A/pUJ6sA2qbA4zusSF87AuXIROZnG7LtEFgbpc0d2zU6QY4Rnw17QSwmA1V45tk28A3pS6e57ESNO3Q+HRBf21PdHUpKU6NFrBC2g9nP0jzzlFn8P/ZLrDRYI+QJ/UDh">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="rqQ2Zqtp1mvMCsRqHl9sYd/kY5ObZ7W23GkgcpHqqSYz2SQbVXsWxl+u9P7bI/MBP5UNEiEqwk/6dyNulI2Ky6n91jeiCzJx7j6IStN+2jlhnq14VVBYAna+ooaZNlsT">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
