create github pages

--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="272">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="152">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="274">
+<section class="engine"><a href="https://mobirise.co/e">web creation software</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="154">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form! </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="rqQ2Zqtp1mvMCsRqHl9sYd/kY5ObZ7W23GkgcpHqqSYz2SQbVXsWxl+u9P7bI/MBP5UNEiEqwk/6dyNulI2Ky6n91jeiCzJx7j6IStN+2jlhnq14VVBYAna+ooaZNlsT">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="okEm0+/PenqZl0hteY6h31JkMiEoYDXHswa/OGeMcAIMg5mt2x8jIgrrNWuk0ucqG+XoSsVRYa0vgqo+KgLLzFX6TtdsYHcumVSWvArvruyYe6BU1k40q5TKT/48jYW+">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
