--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="146">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="263">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="148">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="265">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form! </div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="H7oJqTvlrTAaU1G3GSuod85DTF9hpBDZivHH9KCqDIpK8Ign3DN6a/GJrFyCZvF9nVAQua4URPRQqeM007Jje8vJu41+lwFcOQBeQjLfVQOC7R9xly/CEiaYdSFRfcTY">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="C2n4XlLV3z8vGaDGEFFnN2H8rzpXguqxjLIH950PRHOu13nU0iKFlZu9yZMZ2YvArQqOjofhNP7B8XVhNbaY7ktj9lfMonNH06MMQfZOQ/tY3DqfWdhnFRPR7aQ5zbnp">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
